--- a/src/server/config/config.json
+++ b/src/server/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "nikola",
-    "password": "0505",
+    "username": "",
+    "password": "",
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "nikola",
-    "password": "0505",
+    "username": "",
+    "password": "",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "nikola",
-    "password": "0505",
+    "username": "",
+    "password": "",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
