--- a/src/client/package.json
+++ b/src/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "cross-fetch": "^2.2.2",
     "immutable": "^3.8.2",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
