--- a/src/server/config/config.json
+++ b/src/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "",
-    "password": "",
+    "username": "nikola",
+    "password": "0505",
     "database": "database_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
